--- a/backend-feed-service.yaml
+++ b/backend-feed-service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: udagram
+  name: backend-feed
   labels:
-    run: udagram
+    run: backend-feed
 spec:
   ports:
   - port: 80
     protocol: TCP
   selector:
-    run: udagram
+    run: backend-feed
 
