--- a/backend-user-service.yaml
+++ b/backend-user-service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: udagram
+  name: backend-user
   labels:
-    run: udagram
+    run: backend-user
 spec:
   ports:
   - port: 80
     protocol: TCP
   selector:
-    run: udagram
+    run: backend-user
 
