--- a/env-secret.yaml
+++ b/env-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: env-secret
 type: Opaque
 data:
-  POSTGRES_USERNAME: cG9zdGdyZXM=
+  POSTGRES_USERNAME: dGRvbmc=
   POSTGRES_PASSWORD: NjE2MjkyIUR0eSE=
