--- a/frontend-service.yaml
+++ b/frontend-service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: udagram
+  name: frontend
   labels:
-    run: udagram
+    run: frontend
 spec:
   ports:
   - port: 80
     protocol: TCP
   selector:
-    run: udagram
+    run: frontend
 
