--- a/reverseproxy-deployment.yaml
+++ b/reverseproxy-deployment.yaml
@@ -1,35 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: udagram
+  name: reverseproxy
   labels:
-    app: udagram
+    app: reverseproxy
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: udagram
+      app: reverseproxy
   template:
     metadata:
       labels:
-        app: udagram
+        app: reverseproxy
     spec:
       containers:
-      - name: udagram-frontend
-        image: tdong2010/udagram-frontend
-        ports: 
-        - containerPort: 80
-      - name: udagram-api-feed
-        image: tdong2010/udagram-api-feed
-        ports: 
-        - containerPort: 80
-      - name: udagram-api-user
-        image: tdong2010/udagram-api-user
-        ports: 
-        - containerPort: 80
       - name: reverseproxy
-        image: tdong2010/reverseproxy
+        image: tdong2010/reverseproxy:v1
         ports: 
         - containerPort: 80
-
-
+  
