--- a/.travis.yml
+++ b/.travis.yml
@@ -19,13 +19,13 @@ install:
   - docker build -t udagram-frontend ./udagram-frontend
   - docker build -t reverseproxy ./udagram-reverseproxy
   - echo 'docker images built'
-  - docker tag udagram-api-feed tdong2010/udagram-api-feed:v1
-  - docker tag udagram-api-user tdong2010/udagram-api-user:v1
-  - docker tag udagram-frontend tdong2010/udagram-frontend:v1
+  - docker tag udagram-api-feed tdong2010/udagram-api-feed
+  - docker tag udagram-api-user tdong2010/udagram-api-user
+  - docker tag udagram-frontend tdong2010/udagram-frontend
   - docker tag reverseproxy tdong2010/reverseproxy:v1
   - echo 'docker images tagged'
-  - docker push tdong2010/udagram-api-feed:v1
-  - docker push tdong2010/udagram-api-user:v1
-  - docker push tdong2010/udagram-frontend:v1
-  - docker push tdong2010/reverseproxy:v1
+  - docker push tdong2010/udagram-api-feed
+  - docker push tdong2010/udagram-api-user
+  - docker push tdong2010/udagram-frontend
+  - docker push tdong2010/reverseproxy
   - echo 'docker images pushed'
