--- a/backend-feed-deployment.yaml
+++ b/backend-feed-deployment.yaml
@@ -1,36 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
-    service: backend-feed
   name: backend-feed
+  labels:
+    app: backend-feed
 spec:
   replicas: 1
   selector:
     matchLabels:
-      service: backend-feed
+      app: backend-feed
   template:
     metadata:
       labels:
-        service: backend-feed
+        app: backend-feed
     spec:
       containers:
-      - image: tdong2010/udagram-api-feed
-        name: backend-feed
-        imagePullPolicy: Always  
-        resources:
-          requests:
-            memory: "64Mi"
-            cpu: "250m"
-          limits:
-            memory: "1024Mi"
-            cpu: "500m"                  
+      - name: backend-feed
+        image: tdong2010/udagram-api-feed        
         env:
-        - name: URL
-          valueFrom:
-            configMapKeyRef:
-              name: env-config
-              key: URL
         - name: AWS_BUCKET
           valueFrom:
             configMapKeyRef:
@@ -61,6 +48,11 @@ spec:
             configMapKeyRef:
               name: env-config
               key: POSTGRES_HOST
+        - name: URL
+          valueFrom:
+            configMapKeyRef:
+              name: env-config
+              key: URL
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
