--- a/backend-user-deployment.yaml
+++ b/backend-user-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: backend-user
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: backend-user
@@ -16,60 +16,63 @@ spec:
     spec:
       containers:
       - name: backend-user
-        image: tdong2010/udagram-api-user
+        image: tdong2010/udagram-api-user:latest
         imagePullPolicy: Always  
+        ports: 
+        - containerPort: 8080  
         env:
-          - name: AWS_BUCKET
-            valueFrom:
-              configMapKeyRef:
-                name: env-config
-                key: AWS_BUCKET
-          - name: AWS_PROFILE
-            valueFrom:
-              configMapKeyRef:
-                name: env-config
-                key: AWS_PROFILE
-          - name: AWS_REGION
-            valueFrom:
-              configMapKeyRef:
-                name: env-config
-                key: AWS_REGION
-          - name: JWT_SECRET
-            valueFrom:
-              configMapKeyRef:
-                name: env-config
-                key: JWT_SECRET
-          - name: POSTGRES_DB
-            valueFrom:
-              configMapKeyRef:
-                name: env-config
-                key: POSTGRES_DB
-          - name: POSTGRES_HOST
-            valueFrom:
-              configMapKeyRef:
-                name: env-config
-                key: POSTGRES_HOST
-          - name: URL
-            valueFrom:
-              configMapKeyRef:
-                name: env-config
-                key: URL
-          - name: POSTGRES_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: env-secret
-                key: POSTGRES_PASSWORD
-          - name: POSTGRES_USERNAME
-            valueFrom:
-              secretKeyRef:
-                name: env-secret
-                key: POSTGRES_USERNAME      
-          volumeMounts:
-          - name: aws-secret
-            mountPath: "/root/.aws/"
-            readOnly: true        
-        restartPolicy: Always
-        volumes:
+        - name: AWS_BUCKET
+          valueFrom:
+            configMapKeyRef:
+              name: env-config
+              key: AWS_BUCKET
+        - name: AWS_PROFILE
+          valueFrom:
+            configMapKeyRef:
+              name: env-config
+              key: AWS_PROFILE
+        - name: AWS_REGION
+          valueFrom:
+            configMapKeyRef:
+              name: env-config
+              key: AWS_REGION
+        - name: JWT_SECRET
+          valueFrom:
+            configMapKeyRef:
+              name: env-config
+              key: JWT_SECRET
+        - name: POSTGRES_DB
+          valueFrom:
+            configMapKeyRef:
+              name: env-config
+              key: POSTGRES_DB
+        - name: POSTGRES_HOST
+          valueFrom:
+            configMapKeyRef:
+              name: env-config
+              key: POSTGRES_HOST
+        - name: URL
+          valueFrom:
+            configMapKeyRef:
+              name: env-config
+              key: URL
+        - name: POSTGRES_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: env-secret
+              key: POSTGRES_PASSWORD
+        - name: POSTGRES_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: env-secret
+              key: POSTGRES_USERNAME      
+        volumeMounts:
         - name: aws-secret
-          secret:
-            secretName: aws-secret  
+          mountPath: "/root/.aws/"
+          readOnly: true        
+      restartPolicy: Always
+      volumes:
+      - name: aws-secret
+        secret:
+          secretName: aws-secret  
+      
