--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: frontend
   labels:
-    app: frontend
+    service: frontend
 spec:
   replicas: 2
   selector:
