--- a/reverseproxy-deployment.yaml
+++ b/reverseproxy-deployment.yaml
@@ -3,16 +3,16 @@ kind: Deployment
 metadata:
   name: reverseproxy
   labels:
-    app: reverseproxy
+    service: reverseproxy
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: reverseproxy
+      service: reverseproxy
   template:
     metadata:
       labels:
-        app: reverseproxy
+        service: reverseproxy
     spec:
       containers:
       - name: reverseproxy
