--- a/reverseproxy-service.yaml
+++ b/reverseproxy-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: reverseproxy
   labels:
-    run: reverseproxy
+    service: reverseproxy
 spec:
   selector:
     service: reverseproxy
