--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -8,11 +8,11 @@ spec:
   replicas: 2
   selector:
     matchLabels:
-      app: frontend
+      service: frontend
   template:
     metadata:
       labels:
-        app: frontend
+        service: frontend
     spec:
       containers:
       - name: frontend
